liten ändring (getFirst) istället för get.